syntax = "proto3";

package example.simple;

// This Options allows giving custom name to the pacakge, this affects the package name in the simple.pb.go generated automatically from this file
option go_package = "simplepb";

message SimpleMessage {
    int32 id =1;
    bool is_simple =2;
    string name = 3;
    repeated int32 sample_list =4;
}
